--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
           Thank you for taking the time to help us improve the platform
         </p>
       </header>
-<code> <header class="header">
+<pre></pre><code> <header class="header">
         <h1 id="title" class="text-center">freeCodeCamp Survey Form</h1>
         <p id="description" class="description text-center">
           Thank you for taking the time to help us improve the platform
         </p>
-      </header></code>
+      </header></code></pre>
       <form id="survey-form">
         <div class="form-group">
           <label id="name-label" for="name">Name</label>
